--- a/css/styles.css
+++ b/css/styles.css
@@ -1,62 +1,70 @@
 body {
-  background-color: #FFD36E;
+  background-color: #f2c75c;
   font-family: 'Montserrat', sans-serif;
 }
 
 hr {
   border-style: none;
-  border-top: dotted #99FFCD;
+  border-top: dotted #003b49;
   border-width: 10px;
   width: 10%;
 }
 
+h1, h2, h3, h4 {
+  color: #003b49;
+}
 h1 {
-  color: #9FB4FF;
   font-family: 'Bungee Shade', cursive;
-
 }
 
 h2 {
-  color: #9FB4FF;
   font-family: 'Bebas Neue', cursive;
-}
-.blurb {
-  color: #FFF56D;
-  background-color: #9FB4FF;
-}
-.desc {
-  background-color: #99FFCD;
-}
-.meContainer {
-  background-color: #FFF56D;
-  position: relative;
-  display: inline-block;
-  width: auto;
-}
-
-.meText{
-  display: inline-block;
-  position: relative;
-  bottom: auto;
-  margin: 10px;
-}
-
-.pp{
-  margin: 10px;
-}
-
-.contents {
-  background-color: #FFF56D;
-}
-.projectsContainer {
-  background-color: #FFF56D;
-  width: 70%;
-  float: right;
-}
-.educationContainer {
-  background-color: #FFF56D;
 }
 .start {
   font-weight: bold;
   font-size: 2em;
+}
+.meText{
+  background-color: #f2c75c;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.contents {
+  background-color: #f2c75c;
+}
+.mainContent{
+  display:flex;
+  flex-direction: row;
+}
+.social-links{
+  display: flex;
+}
+.links{
+  display: flex;
+  flex-direction: column;
+  width: 15%;
+  justify-content: center;
+  margin-right: 2%;
+}
+.logo{
+  width: 50px;
+  height: 50px;
+  margin-right: 5px;
+}
+.projectsContainer {
+  background-color: #f2c75c;
+  width: 80%;
+  margin-left: 10px;
+}
+.project{
+  margin-left: 2%;
+}
+.book-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
