Changed file paths

--- a/templates/reads.html
+++ b/templates/reads.html
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee+Shade&family=Montserrat&display=swap" rel="stylesheet">
   </head>
-  
+
   <body>
     <div class="contents">
       <h3>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="reads.html">Reading List</a>
       <h3>
     </div>
