adding expereinces tab to pages

--- a/templates/experience.html
+++ b/templates/experience.html
@@ -6,7 +6,8 @@
   <title>Josh's Work Experience</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body. <h2>Josh's Experience</h2>
+<body>
+  <h2>Josh's Experience</h2>
   <h3><a href="index.html">Home</a> <a href="experience.html">Working on Expereinces</a> <a href="contacts.html">Contact Me</a> <a href="notes.html">Chicken Skratches</a></h3>
   <p><a href="https://www.linkedin.com/in/joshua-chan-1053a7167/">LinkedIn</a> | <a href="index.html">Home</a></p>
   <h3>Executive Director of the Queen's Bridge Building Team | 2020-2021</h3>
@@ -48,5 +49,4 @@
     <hr>
   </div>
   </body>
-
 </html>
