--- a/templates/reads.html
+++ b/templates/reads.html
@@ -15,6 +15,7 @@
       <h3>
         <a href="../index.html">Home</a>
         <a href="reads.html">Reading List</a>
+        <a href="experience.html">Reading List</a>
       <h3>
     </div>
     <div class="book-container">
