updating experiences page

--- a/templates/experience.html
+++ b/templates/experience.html
@@ -21,15 +21,46 @@
 
     <div class="extended-resume-container">
       <div class="experience-title">
-        <h1>Books I've Read</h1>
+        <h1>What have I done?</h1>
       </div>
       <div class="work-containter">
-        <h3>Executive Director of the Queen's Bridge Building Team | 2020-2021</h3>
+        <h3>Junior Odoo ERP Developer at Aarcomm| October 2022- August 2023</h3>
         <ul>
-            <li>Collaborated with team members to design a popsicle stick bridge that competed in the 2020 Troitsky Bridge Building Competition held in Montreal.</li>
-            <li>Managed and allocated budgets as the Director of Finance for the Queens Bridge Building Team 2020-2021 to prevent overspending during COVID-19.</li>
-            <li>Adapted from COVID-19 and realigned the QBBT goals to build a strong team member foundation for future years and added 18 new members to the team.</li>
-            <li>Supervised and led the executive team to provide a fun and engaging learning environment for QBBT general members through a modified in-person/online delivery during the reopening phase of COVID-19.</li>
+            <li>Developed unit tests to ensure a smooth transition during Odoo version upgrades and system stability when implementing new custom features
+                <ul>
+                    <li>Tested CRUD principals of standard base modules and custom modules</li>
+                </ul>
+            </li>
+            <li>Successfully migrated Odoo systems from Odoo Studio to Odoo SH
+                <ul>
+                    <li>Migrated custom studio fields and views to Odoo SH</li>
+                </ul>
+            </li>
+            <li>Modified and updated existing Python code to ensure a smooth upgrade between Odoo Version 15.0 to 16.0
+                <ul>
+                    <li>Developed unit tests to test custom modules and fields added pre-upgrade</li>
+                    <li>Updated custom code to ensure compatability with Odoo V16.0</li>
+                </ul>
+            </li>
+            <li>Created a serial number tracking application for the production department
+                <ul>
+                    <li>Collaborated with the production department to build an application curated to their work flow</li>
+                    <li>Created relational database tables to incorporate sales, procurment, and product repairs into product tracking</li>
+                    <li>Conducted hands on testing within the production workflow to streamline data entry into data tables</li>
+                </ul>
+            </li>
+            <li>Customized the Odoo ERP frontend by creating new views, fields, and buttons to optimize user workflow
+            </li>
+        </ul>
+        <h3>Regional Engineer Coop Student at Enbridge Gas| May 2022- September 2022</h3>
+        <ul>
+            <li>Developed a Python script to parse a quarterly pipe forecast files and return a summary .xlsx file to be submitted for approval turning a 4 hour task to 5 minutes</li>
+            <li>Assited with the management of multiple projects at various stages of the project lifecycle</li>
+            <li>Requested field changes to construction drawings as needed to reflect actual installation of stations and created as-built drawings to reflect changes</li>
+            <li>Submitted cost estimates for approval for small- and large-scale station projects of upwards of $500,000</li>
+            <li>Optimized placement of stations in accordance with construction guidelines by meeting with Utility Service Representatives on site </li>
+            <li>Ordered materials for stations projects, spending up to $150,000</li>
+            <li>Obtained working approvals for construction on a tight timeline by working across teams</li>
         </ul>
         <h3>Executive Director of the Queen's Bridge Building Team | 2020-2021</h3>
         <ul>
@@ -39,6 +70,19 @@
             <li>Supervised and led the executive team to provide a fun and engaging learning environment for QBBT general members through a modified in-person/online delivery during the reopening phase of COVID-19.</li>
         </ul>
       </div>
+      <h3>Summer Intern at Syntronic | May 2021 - August 2021</h3>
+      <ul>
+        <li>Developed and implemented a backend comment service and HTML frontend using Python and Django Rest Framework</li>
+        <li>Created an SQLite3 Database with CRUD principals for comments and connected to the Django Framework</li>
+        <li>Validated HTTP protocols and API calls were implemented correctly by creating automated test scripts</li>
+        <li>Documented Ubuntu virtual desktop installation and set up to create a local development environment for the purpose of onboarding and training</li>
+      </ul>
+      <h3>Qualtiy Assurance Test at Trilogy | May 2020 - June 2020</h3>
+      <ul>
+        <li>Tested HTTP protocols and API calls using Postman</li>
+        <li>Further developed my communication skills as part of a global workforce through colleagues all over the world</li>
+        <li>Proactively resolved technical issues with asynchronous global teams in a self-sufficient manner</li>
+      </ul>
       <div class="education-Container">
         <h2>Education</h2>
         <table>
