Finalizing expeirence and home page

--- a/templates/experience.html
+++ b/templates/experience.html
@@ -15,7 +15,7 @@
       <h3>
         <a href="../index.html">Home</a>
         <a href="reads.html">Reading List</a>
-        <a href="experience.html">Reading List</a>
+        <a href="experience.html">Experience</a>
       <h3>
     </div>
 
@@ -83,6 +83,7 @@
         <li>Further developed my communication skills as part of a global workforce through colleagues all over the world</li>
         <li>Proactively resolved technical issues with asynchronous global teams in a self-sufficient manner</li>
       </ul>
+      <br>
       <div class="education-Container">
         <h2>Education</h2>
         <table>
