--- a/templates/reads.html
+++ b/templates/reads.html
@@ -24,7 +24,7 @@
       </div>
       <h2>2022</h2>
       <li>The Devil's Playbook - Etter</li>
-      <li>Has China Won - </li>
+      <li>Has China Won - Mahbubani</li>
       <h2>2021</h2>
       <li>Billion Dollar Whale - Wright & Hope</li>
       <li>Shoe Dog - Knight</li>
