adding addition page for mech stuff

--- a/templates/experience.html
+++ b/templates/experience.html
@@ -72,7 +72,11 @@
       </div>
       <h3>Summer Intern at Syntronic | May 2021 - August 2021</h3>
       <ul>
-        <li>Developed and implemented a backend comment service and HTML frontend using Python and Django Rest Framework</li>
+        <li>Developed and implemented a backend comment service and HTML frontend using Python and Django Rest Framework
+          <ul>
+            <li>Utilized Djangos default SQlite database to create a working commenting service app with CRUD principals</li>
+          </ul>
+        </li>
         <li>Created an SQLite3 Database with CRUD principals for comments and connected to the Django Framework</li>
         <li>Validated HTTP protocols and API calls were implemented correctly by creating automated test scripts</li>
         <li>Documented Ubuntu virtual desktop installation and set up to create a local development environment for the purpose of onboarding and training</li>
