--- a/templates/experience.html
+++ b/templates/experience.html
@@ -16,6 +16,7 @@
         <a href="../index.html">Home</a>
         <a href="reads.html">Reading List</a>
         <a href="experience.html">Experience</a>
+        <a href="mech.html">MECH 460</a>
       <h3>
     </div>
 
