--- a/templates/mech.html
+++ b/templates/mech.html
@@ -13,10 +13,10 @@
   <body>
     <div class="contents">
       <h3>
-        <a href="../index.html">Home</a>
-        <a href="reads.html">Reading List</a>
-        <a href="experience.html">Experience</a>
-        <a href="mech.html">MECH 460</a>
+        <a href="index.html">Home</a>
+        <a href="templates/reads.html">Reading List</a>
+        <a href="templates/experience.html">Expereinces</a>
+        <a href="templates/mech.html">MECH 460</a>
       <h3>
     </div>
     <div class="mech-container">
