--- a/templates/experience.html
+++ b/templates/experience.html
@@ -100,7 +100,7 @@
             </td>
             <td>
               <ul>
-                <li>Third year student in Mechanical Engineering working towards a bachelor's in Applied Science and Engineering</li>
+                <li>Fifth year student in Mechanical Engineering working towards a bachelor's in Applied Science and Engineering</li>
                 <li>Related Coursework: Introduction to Robotics, Digital Systems, Mathematical and Computational Tools for Mechancial Engineers, Introduction to C Programming</li>
               </ul>
             </td>
