--- a/templates/mech.html
+++ b/templates/mech.html
@@ -13,10 +13,10 @@
   <body>
     <div class="contents">
       <h3>
-        <a href="../index.html">Home</a>
-        <a href="/reads.html">Reading List</a>
-        <a href="/experience.html">Expereinces</a>
-        <a href="/mech.html">MECH 460</a>
+        <a href="/index.html">Home</a>
+        <a href="/templates/reads.html">Reading List</a>
+        <a href="/templates/experience.html">Experience</a>
+        <a href="/templates/mech.html">MECH 460</a>
       <h3>
     </div>
     <div class="mech-container">
@@ -27,7 +27,6 @@
       <li>Great team player who will make sure that everyone opion is heard</li>
       <li>Loves solving problems and will always try and find a solution that works for everyone, even if it takes time</li>
       <li>Pretty adaptably and flexible in terms of working as a team but don't ask me to do the splits!</li>
-
       <h2>What I Don't Have at the Table</h2>
       <li>Not too big into Mech stuff, but am willing to do the coding aspect of things</li>
       <li>Has a hard time when given too much information. I'll try and take notes but if you're talking too fast or jump from topic to topic, subject to subject, you'll bet I'll be lost!</li>
