--- a/templates/reads.html
+++ b/templates/reads.html
@@ -13,10 +13,8 @@
   <body>
     <div class="contents">
       <h3>
-        <a href="/index.html">Home</a>
-        <a href="/templates/reads.html">Reading List</a>
-        <a href="/templates/experience.html">Experience</a>
-        <a href="/templates/mech.html">MECH 460</a>
+        <a href="index.html">Home</a>
+        <a href="reads.html">Reading List</a>
       <h3>
     </div>
     <div class="book-container">
