--- a/templates/reads.html
+++ b/templates/reads.html
@@ -13,8 +13,10 @@
   <body>
     <div class="contents">
       <h3>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="reads.html">Reading List</a>
+        <a href="experience.html">Experience</a>
+        <a href="mech.html">MECH 460</a>
       <h3>
     </div>
     <div class="book-container">
